--- a/Back/exam/src/main/resources/application.properties
+++ b/Back/exam/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# Configuration de la base de données MySQL
+# Configuration de la base de donnÃ©es MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/sports_manager
 spring.datasource.username=root
 spring.datasource.password=mdp
